<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/tvSplash"
            style="@style/TitleApp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="56sp"
            android:transitionName="textApp"
            app:layout_constraintBottom_toTopOf="@+id/btMaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btMaps"
            style="@style/btBlack"
            android:layout_width="356dp"
            android:layout_height="156dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btMaps"
            app:layout_constraintBottom_toTopOf="@+id/btContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSplash" />

        <Button
            android:id="@+id/btContacts"
            style="@style/btBlack"
            android:layout_width="356dp"
            android:layout_height="156dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btContacts"
            app:layout_constraintBottom_toTopOf="@+id/btAbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btMaps" />

        <Button
            android:id="@+id/btAbout"
            style="@style/btBlack"
            android:layout_width="356dp"
            android:layout_height="156dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btAbout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btContacts" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>

